<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CareBridge</string>

    //Welcome
    <string name="viewpjct">View Projects</string>

    //Login
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgetPassword"><a href="#">Forget Password?</a></string>
    <string name="noAcc"><a href="#">Not Registered?, Sign Up Here</a></string>
    <string name="reserpwd"><a href="#">Reset Password</a></string>

    //Register
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="retypepwd">Retype Password</string>
    <string name="already_acc"><a href="#">Already have an account?</a></string>

    //Add project
    <string name="add_project">Add Project</string>
    <string name="add_n_project">Add Project/Need</string>
    <string name="p_name">Project/Item Name</string>
    <string name="p_date">Date:  dd/mm/yyyy</string>
    <string name="p_time">Time:    :   </string>
    <string name="p_place">Place/Location</string>
    <string name="p_description">Description</string>
    <string name="p_contatct">Contact Details</string>
    <string name="submit_btn">Submit</string>
    <string name="p_type">Project Type</string>


    //Edit project
    <string name="edit_project">Edit Project</string>
    <string name="edit_n_project">Edit Project/Need</string>
    <string name="e_name">Project/Item Name</string>
    <string name="e_date">Date:  dd/mm/yyyy</string>
    <string name="e_time">Time:    :   </string>
    <string name="e_place">Place/Location</string>
    <string name="e_description">Description</string>
    <string name="e_contatct">Contact Details</string>
    <string name="e_type">Project Type</string>

    //View project_EDUCATION
    <string name="Back">Back</string>
    <string name="Education">EDUCATION</string>
    <string name="Projects">Projects</string>
    <string name="Search">Search Here</string>
    <string name="Name1">Sip Sathara</string>
    <string name="Description1">The Description</string>
    <string name="Date1">Date :</string>
    <string name="Time1">Time :</string>
    <string name="Location1">Location :</string>
    <string name="Contact1">Contact :</string>
    <string name="Date1d">Monday 5th of June></string>
    <string name="Time1d">8 am onwards</string>
    <string name="Location1d">Therapuththa Maha Vidyalaya, Panakaduwa</string>
    <string name="Contact1d">Dasun - 0771234578</string>

    //Edit account
    <string name="edit_account">Edit Account</string>
    <string name="edit_name">Name</string>
    <string name="edit_phone">Phone Number</string>
    <string name="edit_website">Website</string>
    <string name="edit_location">Location</string>
    <string name="edit_password">Password</string>
    <string name="edit_retypepwd">Retype Password</string>
    <string name="edit_already_acc"><a href="#">Already have an account?</a></string>
    <string name="edit_btn">Edit</string>
    <string name="logout_btn">Log Out</string>


    //MEDICATION

    <string name="topic">MEDICINE</string>
    <string name="med_project1">Donation for Clinic</string>
    <string name="med_project2">Medicine for Heart Patient</string>
    <string name="med_project3">Blood Donation</string>
    <string name="pr1des">We need some medication for our 24*7 clinic.
        We provide medical assistant to those who need help free of charge.
        Due to unavailability of essential medicine,
        we cannot provide our service. If you can help, details are below.</string>
    <string name="pr2des">I cannot find "Statins 500mg" medicine.
        it is for my husband who had a heart surgery.
        If anyone can help, contact me ASAP</string>
    <string name="pr3des">We are SLIIT 2nd year students.
        We are organizing a Blood Donation project. Those who like to donate, please view the details and contact us.</string>

    //FOOD

    <string name="topic2">FOOD</string>
    <string name="food_project1">Pure Water</string>
    <string name="food_project2">We are one</string>
    <string name="food_project3">Street Child</string>
    <string name="food1des">We are hoping to implement a water filtering system to a Village. Those who can help to this project, Please contact us.</string>
    <string name="food2des">Our people are suffering due to a food shortage in our country. We are one a is national initiative that enables everyone Of us to hap dispel hunger in others in any way we can,</string>
    <string name="food3des">Hopes to help remedy this food crisis by providing children with free access to essential food products</string>

    //EDUCATION

    <string name="topic3">EDUCATION</string>
    <string name="edu_project1">EDU Sathkara</string>
    <string name="edu_project2">O/L Seminar</string>
    <string name="edu_project3">Sip Sathara</string>
    <string name="edu1des">We are donating education resources and stationary for school children.</string>
    <string name="edu2des">We are university students and we are organizing a online free seminar for O/L Students. Those who like to volunteer, please contact us. </string>
    <string name="edu3des">Aims to ensure children in srilanka have access to education by closing access gaps and ensuring that they are enough facilities in place to support their learning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="title_activity_food_card">FoodCard</string>
    <string name="title_activity_edit_edu_card">EditEduCard</string>
    <string name="title_activity_password_reset">PasswordReset</string>
    <string name="title_activity_edit_profile">EditProfile</string>

</resources>