<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMainFrag.SelectEditType">
    <ImageView
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    app:srcCompat="@drawable/background"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/edubtn"
        android:layout_width="220dp"
        android:layout_height="91dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/grey1"
        android:text="@string/Education"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/foodbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/foodbtn"
        android:layout_width="220dp"
        android:layout_height="91dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/grey1"
        android:text="@string/topic2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medibtn"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/background" />

    <Button
        android:id="@+id/medibtn"
        android:layout_width="220dp"
        android:layout_height="91dp"
        android:layout_marginBottom="175dp"
        android:backgroundTint="@color/grey1"
        android:text="@string/topic"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>